add ffmpeg installation to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ compiler:
   - gcc
 before_install:
   - sudo apt-get update -qq
+  - sudo apt-get install -qq libx264-dev libv4l-dev libdc1394-22-dev libavcodec-dev libavformat-dev libswscale-dev
+  - sudo ldconfig
   - mkdir ../opencv/
   - cd ../opencv/
   - wget http://sourceforge.net/projects/opencvlibrary/files/opencv-unix/2.4.9/opencv-2.4.9.zip/download
@@ -10,15 +12,15 @@ before_install:
   - mkdir build-opencv
   - cd ./build-opencv/
 install:
-  - cmake ../opencv-2.4.9/ -DBUILD_opencv_apps=OFF -DBUILD_opencv_calib3d=OFF -DBUILD_opencv_contrib=OFF -DBUILD_opencv_features2d=OFF -DBUILD_opencv_flann=OFF -DBUILD_opencv_gpu=OFF -DBUILD_opencv_legacy=OFF -DBUILD_opencv_nonfree=OFF -DBUILD_opencv_ocl=OFF -DBUILD_opencv_photo=OFF -DBUILD_opencv_python=OFF -DBUILD_opencv_stitching=OFF -DBUILD_opencv_superres=OFF -DBUILD_opencv_ts=OFF -DBUILD_opencv_videostab=OFF -DBUILD_opencv_world=OFF -DBUILD_DOCS=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DBUILD_JAVA=OFF
-  - make -j5
+  - cmake ../opencv-2.4.9/ -DBUILD_opencv_apps=OFF -DBUILD_opencv_calib3d=OFF -DBUILD_opencv_contrib=OFF -DBUILD_opencv_features2d=OFF -DBUILD_opencv_flann=OFF -DBUILD_opencv_gpu=OFF -DBUILD_opencv_legacy=OFF -DBUILD_opencv_nonfree=OFF -DBUILD_opencv_ocl=OFF -DBUILD_opencv_photo=OFF -DBUILD_opencv_python=OFF -DBUILD_opencv_stitching=OFF -DBUILD_opencv_superres=OFF -DBUILD_opencv_ts=OFF -DBUILD_opencv_videostab=OFF -DBUILD_opencv_world=OFF -DBUILD_DOCS=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF
+  - make -j8
   - sudo make install
 before_script:
   - mkdir ../../build
   - cd ../../build
 script:
   - cmake ../swod
-  - make -j5
+  - make -j8
   - cd ./bin
   - ./swod_test
 notifications:
